Added StampOut command
