# src/WebUI/Server/Controllers/TimeEntryController.cs
@@ -1,5 +1,6 @@
 ﻿using Application.Employee.Queries.GetEmployeeByIdentifier;
 using Application.TimeEntry.Commands.StampIn;
+using Application.TimeEntry.Commands.StampOut;
 using MediatR;
 using Microsoft.AspNetCore.Mvc;
 using Server.Common.Controlling;
@@ -12,8 +13,16 @@ public sealed class TimeEntryController : ApiControllerBase
 {
     public TimeEntryController(IMediator mediator) : base(mediator) { }
 
-    [HttpPost]
+    [HttpPost("stamp-in")]
     public async Task<ActionResult> StampIn([FromBody] StampInCommand command)
+    {
+        await Mediator.Send(command);
+
+        return Ok();
+    }
+
+    [HttpPost("stamp-out")]
+    public async Task<ActionResult> StampOut([FromBody] StampOutCommand command)
     {
         await Mediator.Send(command);
 
